Nutch Change Log
    
Nutch 1.11 Release 25/10/2015 (dd/mm/yyyy)
Release Report: http://s.apache.org/nutch11

* NUTCH-2157 Addressing Miredot REST API Warnings (Sujen Shah)

* NUTCH-2165 FileDumper Util hard codes part-# folder name (joyce)

* NUTCH-2167 Backport TableUtil from 2.x for URL reversing (joyce)

* NUTCH-2160 Upgrade Selenium Java to 2.48.2 (lewismc, kwhitehall)

* NUTCH-2120 Remove MapWritable from trunk codebase (lewismc)

* NUTCH-1911 Improve DomainStatistics tool command line parsing (joyce)

* NUTCH-2064 URLNormalizer basic to encode reserved chars and decode non-reserved chars (markus, snagel)

* NUTCH-2159 Ensure that all WebApp files are copied into generated artifacts for 1.X Webapp (lewismc)

* NUTCH-2154 Nutch REST API (DB) suffering NullPointerException (Aron Ahmadia, Sujen Shah via mattmann)

* NUTCH-2150 Add protocolstats utility (Michael Joyce via mattmann)

* NUTCH-2146 hashCode on the Outlink class (jorgelbg via mattmann)

* NUTCH-2155 Create a "crawl completeness" utility (Michael Joyce via mattmann)

* NUTCH-1988 Make nested output directory dump optional... again (Michael Joyce via lewismc)

* NUTCH-1800 Documentation for Nutch 1.X and 2.X REST APIs (lewismc)

* NUTCH-2149 REST endpoint to read Nutch sequence files (Sujen Shah)

* NUTCH-2139 Basic plugin to index inlinks and outlinks (jorgelbg)

* NUTCH-2128 Review and update mapred --> mapreduce config params in crawl script (lewismc)

* NUTCH-2141 Change the InteractiveSelenium plugin handler Interface to return page content
  (Balaji Gurumurthy via mattmann)

* NUTCH-2129 Add protocol status tracking to crawl datum (Michael Joyce via mattmann)

* NUTCH-2142 Nutch File Dump - FileNotFoundException (Invalid Argument) Error (Karanjeet Singh via mattmann)

* NUTCH-2136 Implement a different version of Naive Bayes Parse Filter (Asitang Mishra)

* NUTCH-2109 Create a brute force click-all-ajax-links utility fucntion for selenium interactive plugin (Asitang Mishra)
